--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,4 +1,4 @@
-Name: Terraform Apply
+name: Terraform Apply
 
 on:
   push:
@@ -6,8 +6,12 @@ on:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: Terraform
     runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Checkout
@@ -19,10 +23,10 @@ jobs:
           terraform_version: 1.3.0
 
       - name: Configure AWS CLI
-          uses: aws-actions/configure-aws-credentials@v1
-          with:
-            role-to-assume: ${{ secrets.AWS_ASSUME_ROLE }}
-            aws-region: ${{ env.AWS_REGION }}
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_ASSUME_ROLE }}
+          aws-region: af-south-1
 
       - name: Terraform Format
         id: fmt
